@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Add missing component packing file.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Initial work on a serious spring-electrical algorithm.
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
